<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018-2020 The Xiaomi-SDM660 Project

     https://github.com/xiaomi-sdm660
     
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="advanced_settings">Device Parts</string>
    <string name="advanced_settings_summary">Device specific advanced settings</string>

    <string name="display_title">Display</string>

    <!-- Mi Note 3 Settings -->
    <string name="jason_pref_title">Device Settings</string>
    <string name="jason_pref_summary">Mi Note 3 extra settings</string>

    <!-- KCal -->
    <string name="device_kcal_title">Display Color Calibration</string>

    <!-- Notification LED brightness -->
    <string name="notification_title">Notification LED</string>
    <string name="notification_led_title">LED Brightness</string>

    <!-- Ambient Display -->
    <string name="ambient_display">Ambient Display</string>
    <string name="advanced_doze_summary">Device specific ambient gesture settings</string>

    <string name="vibration_title">Haptic Feedback</string>
    <string name="vibration_strength_title">Strength</string>

    <!-- Thermal Profiles -->
    <string name="thermal_profile_title">Thermal</string>
    <string name="thermal_title">Thermal Settings</string>
    <string name="thermal_summary">Choose your Thermal Profile</string>
    <string name="thermal_dialogTitle">Choose your Thermal Profile</string>

    <!-- Values for Thermal Presets -->
    <string name="thermal_performance">Performance</string>
    <string name="thermal_battery">Battery</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_balance">Balance</string>
    <string name="thermal_extreme_battery">Extreme Battery</string>

    <!-- kcal -->
    <string name="advanced_settings_kcal">Display Color Calibration</string>
    <string name="cat_colormanagement">Color Settings</string>
    <string name="cat_calibration">Display Calibration</string>

    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale Display</string>

    <string name="presets_dialog_title">Select Preset</string>
    <!-- Presets -->
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>

    <string name="hall_wakeup_title">Flip Cover Wakeup</string>
    <string name="hall_title">Enable Flip Cover Wakeup</string>
    <string name="hall_wakeup_summary">Wakeup device via magnetic Flip Cover</string>
    <!-- menu -->
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- CustomSeekBarPreference -->
    <string name="edit_value">Choose New Value</string>
    <string name="default_value">Default Value</string>
    <string name="edit_hint">Value between %1$d and %2$d</string>

    <!-- FPS Info -->
    <string name="fps_info_title">FPS Overlay</string>
    <string name="fps_info_summary">Show overlay with with current frames per second</string>
    
    <!-- Audio amplification -->
    <string name="audio_amplify">Amplify Audio</string>
    <string name="headphone_gain">Headphone Gain</string>
    <string name="mic_gain">Microphone Gain</string>
    
    <!-- Selinux Switch -->
    <string name="selinux_explanation_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk (The following options will be grayed out if su not found!).</string>
    <string name="selinux_category">SELinux</string>
    <string name="selinux_mode_title">SELinux Mode</string>
    <string name="selinux_permissive_summary">Permissive</string>
    <string name="selinux_enforcing_summary">Enforcing</string>
    <string name="selinux_persistence_title">Persist Across Reboots</string>
    <string name="selinux_persistence_summary">Restore the above set sepolicy mode on each boot</string>
    <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
    <string name="selinux_enforcing_toast_title">Selinux set to enforcing!</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>
</resources>
