<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018-2020 The Xiaomi-SDM660 Project

     https://github.com/xiaomi-sdm660
     
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <com.my.device.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            android:title="@string/vibration_strength_title"
            app:min="1"
            app:units="%" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_led"
        android:title="@string/notification_title">
        <com.my.device.parts.preferences.NotificationLedSeekBarPreference
            android:key="notification_led_brightness"
            android:title="@string/notification_led_title"
            android:max="100"
            app:min="1"
            app:units="%"
            android:defaultValue="100" />
    </PreferenceCategory>
    
    <PreferenceCategory
       android:key="audio_amplify"
       android:title="@string/audio_amplify">

        <com.my.device.parts.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="headphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain"/>

        <com.my.device.parts.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="mic_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/mic_gain"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="device_doze"
            android:persistent="false"
            android:summary="@string/advanced_doze_summary"
            android:title="@string/ambient_display"
            android:icon="@drawable/ic_doze">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.my.device.doze.DozeSettingsActivity"
                android:targetPackage="com.my.device.doze" />
        </Preference>
        
        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:title="@string/device_kcal_title"
            android:icon="@drawable/ic_color">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.my.device.parts.kcal.KCalSettingsActivity"
                android:targetPackage="com.my.device.parts.kcal" />
        </Preference>

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <Preference
            android:key="device_jason"
            android:persistent="false"
            android:summary="@string/jason_pref_summary"
            android:title="@string/jason_pref_title"
            android:icon="@drawable/ic_jason">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.my.device.parts.devicex.ButtonSettingsActivity"
                android:targetPackage="com.my.device.parts.devicex" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="thermal_profile"
        android:title="@string/thermal_profile_title">

        <com.my.device.parts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/thermal_dialogTitle"
            android:entries="@array/thermal_profiles"
            android:entryValues="@array/thermal_values"
            android:key="thermal"
            android:summary="@string/thermal_summary"
            android:title="@string/thermal_title"
            android:icon="@drawable/ic_thermal" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="hall_wakeup"
        android:title="@string/hall_wakeup_title">

        <com.my.device.parts.preferences.SecureSettingSwitchPreference
            android:defaultValue="true"
            android:key="hall"
            android:summary="@string/hall_wakeup_summary"
            android:title="@string/hall_title"
            android:icon="@drawable/ic_flip" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="selinux"
        android:title="@string/selinux_category">

       <Preference
          android:summary="@string/selinux_explanation_summary"
          android:selectable="false"/>

       <SwitchPreference
          android:key="selinux_mode"
          android:icon="@drawable/ic_linux"
          android:title="@string/selinux_mode_title"
          android:summaryOn="@string/selinux_enforcing_summary"
          android:summaryOff="@string/selinux_permissive_summary" />

        <SwitchPreference
          android:key="selinux_persistence"
          android:icon="@drawable/ic_power"
          android:title="@string/selinux_persistence_title"
          android:summary="@string/selinux_persistence_summary"
          android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
